[project]
name = "kuwahara"
version = "0.1.0"
description = ""
authors = [
    {name = "favouritetasty",email = "19307110112@fudan.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "kuwahara", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
